feat: create first controller methods

--- a/src/VerdeBordo.Infra/VerdeBordo.Infra.csproj
+++ b/src/VerdeBordo.Infra/VerdeBordo.Infra.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\VerdeBordo.Domain\VerdeBordo.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
