--- a/src/VerdeBordo.API/VerdeBordo.API.csproj
+++ b/src/VerdeBordo.API/VerdeBordo.API.csproj
@@ -1,13 +1,19 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>888eb10d-a0d7-4a0f-9f97-af2ec2f43c8d</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\VerdeBordo.Domain\VerdeBordo.Domain.csproj" />
+    <ProjectReference Include="..\VerdeBordo.Infra\VerdeBordo.Infra.csproj" />
   </ItemGroup>
 
 </Project>
