--- a/test/VerdeBordo.API.Tests/VerdeBordo.API.Tests.csproj
+++ b/test/VerdeBordo.API.Tests/VerdeBordo.API.Tests.csproj
@@ -8,6 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Bogus" Version="34.0.2" />
+    <PackageReference Include="FluentAssertions" Version="6.6.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
@@ -22,6 +24,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\VerdeBordo.API\VerdeBordo.API.csproj" />
+    <ProjectReference Include="..\..\src\VerdeBordo.Domain\VerdeBordo.Domain.csproj" />
+    <ProjectReference Include="..\..\src\VerdeBordo.Infra\VerdeBordo.Infra.csproj" />
   </ItemGroup>
 
 </Project>
