--- a/src/VerdeBordo.API/VerdeBordo.API.csproj
+++ b/src/VerdeBordo.API/VerdeBordo.API.csproj
@@ -7,6 +7,11 @@
     <UserSecretsId>888eb10d-a0d7-4a0f-9f97-af2ec2f43c8d</UserSecretsId>
   </PropertyGroup>
 
+  <PropertyGroup>
+	  <GenerateDocumentationFile>true</GenerateDocumentationFile>
+	  <NoWarn>$(NoWarn);1591</NoWarn>
+  </PropertyGroup>
+	
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.5">
       <PrivateAssets>all</PrivateAssets>
@@ -23,6 +28,10 @@
   <ItemGroup>
     <ProjectReference Include="..\VerdeBordo.Domain\VerdeBordo.Domain.csproj" />
     <ProjectReference Include="..\VerdeBordo.Infra\VerdeBordo.Infra.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Configurations\" />
   </ItemGroup>
 
 </Project>
